[gd_scene load_steps=10 format=3 uid="uid://cwe10f71qd1ue"]

[ext_resource type="Script" path="res://kortti.gd" id="1_dj07d"]
[ext_resource type="Texture2D" uid="uid://l4xgcf05cwua" path="res://Cards/card_blank_big.png" id="1_girmx"]
[ext_resource type="Texture2D" uid="uid://4bkp5wicayav" path="res://Assets/Traps/lich.png" id="1_m22n4"]
[ext_resource type="FontFile" uid="uid://dd8wbmemi58e8" path="res://Fonts/fonts/poco/Poco.ttf" id="3_a05qa"]

[sub_resource type="LabelSettings" id="LabelSettings_eu27y"]
font = ExtResource("3_a05qa")
font_size = 42

[sub_resource type="LabelSettings" id="LabelSettings_5u0ik"]
font = ExtResource("3_a05qa")
font_size = 40
outline_size = 200
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kdbcj"]
font = ExtResource("3_a05qa")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_u083m"]
font = ExtResource("3_a05qa")
font_size = 150

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpypl"]
size = Vector2(69, 100)

[node name="Card" type="Node2D" groups=["droppable"]]
z_index = 3
position = Vector2(300, 700)
script = ExtResource("1_dj07d")

[node name="Card_frame" type="Sprite2D" parent="."]
position = Vector2(-0.999939, 6.00002)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_girmx")

[node name="Card_content" type="Sprite2D" parent="Card_frame"]
position = Vector2(4.95911e-05, -160)
scale = Vector2(1.02822, 1.01918)
texture = ExtResource("1_m22n4")

[node name="card_title" type="Label" parent="Card_frame"]
offset_left = -277.0
offset_top = -461.0
offset_right = 279.0
offset_bottom = -399.0
text = "Gunzuz the lich"
label_settings = SubResource("LabelSettings_eu27y")

[node name="card_flavour" type="Label" parent="Card_frame"]
offset_left = -246.0
offset_top = 553.0
offset_right = 304.0
offset_bottom = 723.0
text = "\"spooky catch-phrase here\""
label_settings = SubResource("LabelSettings_5u0ik")

[node name="card_effect" type="Label" parent="Card_frame"]
offset_left = -275.0
offset_top = 90.0
offset_right = 397.0
offset_bottom = 302.0
text = "The lich adds +1 damage to every 
undead monster room in your dungeon 
(we don't have undead type rooms yet,
but we might do them later)."
label_settings = SubResource("LabelSettings_kdbcj")

[node name="card_attack" type="Label" parent="Card_frame"]
offset_left = -238.0
offset_top = 228.0
offset_right = -150.0
offset_bottom = 456.0
text = "4"
label_settings = SubResource("LabelSettings_u083m")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 5)
shape = SubResource("RectangleShape2D_kpypl")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
